; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_drop_monitor.c_net_dm_queue_len_set.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_drop_monitor.c_net_dm_queue_len_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.genl_info = type { i32* }

@NET_DM_ATTR_QUEUE_LEN = common dso_local global i64 0, align 8
@net_dm_queue_len = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.genl_info*)* @net_dm_queue_len_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @net_dm_queue_len_set(%struct.genl_info* %0) #0 {
  %2 = alloca %struct.genl_info*, align 8
  store %struct.genl_info* %0, %struct.genl_info** %2, align 8
  %3 = load %struct.genl_info*, %struct.genl_info** %2, align 8
  %4 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = load i64, i64* @NET_DM_ATTR_QUEUE_LEN, align 8
  %7 = getelementptr inbounds i32, i32* %5, i64 %6
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %19

11:                                               ; preds = %1
  %12 = load %struct.genl_info*, %struct.genl_info** %2, align 8
  %13 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i64, i64* @NET_DM_ATTR_QUEUE_LEN, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @nla_get_u32(i32 %17)
  store i32 %18, i32* @net_dm_queue_len, align 4
  br label %19

19:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @nla_get_u32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
